2004-05-17  John  <jpff@cage.codemist.co.uk>

	* SConstruct: Use -Wl,-Bdynamic as it is  linker option 

	* strings/makedb.c (main): Correct format in prontf twice for
	longs

	* Top/main.c (install_signal_handler): Retore signal handling

2004-05-17  John ffitch  <jpff@codemist.co.uk>

	* InOut/rtpa.c (playopen_): Allow selection of ALSA device via
	environment variable

	* Engine/entry1.c: Restored tablekt and tableikt

2004-05-16  Michael Gogins <gogins@pipeline.com>

	* frontends/CsoundVST/CsoundVstFltk.cpp: fixed problem
    with linefeeds in message lines.

2004-05-12  John ffitch  <jpff@codemist.co.uk>

	* SConstruct: Set makeDynamic=1 for linux

2004-05-09  Michael Gogins <gogins@pipeline.com>

	* Added high-level "C" API for CsoundVST
	(frontends/CsoundVST/csoundvst_api.h and .c). 

	* Fixed random number generator bug in CsoundVST::StrangeAttractor.

2004-05-07  Michael Gogins <gogins@pipeline.com>

	* Fixed some bugs in rtpa.c to enable lower-latency
        real-time audio.

2004-05-05  Michael Gogins <gogins@pipeline.com>

	* Fixed Fl_graph.cpp and widgets.cpp event handling with thread
	protection. FLTK widgets work now (at least on Windows).

2004-05-05  John ffitch  <jpff@codemist.co.uk>

	* strings/all_strings: 
	* strings/english-strings: Heavily revised

	* Top/pvanal.c (pvanal): 1781->1771

	* Engine/oload.c (oload): 1711->1704 as overuse

	* OOps/pvfileio.c (pvoc_readfmt): Minor typo in string
	(pvoc_readheader): 1555 instead of 1635
	(pvoc_putframes): 1527 instead of 1657

	* OOps/pvxanal.c (pvxanal): Minor typo in string

	* Opcodes/scansynx.c Many string renumering for uniqueness

	* OOps/fout.c (outfile_set): 1463->1451 as overuse

	* Opcodes/uggab.c (rsnsety): 1453->1453 as overuse

	* Top/dnoise.c (dnoise): 1198->1199 as overuse
	(dnoise): Minor type in string

	* OOps/diskin.c (newsndinset): Minor string correction

	* OOps/ugrw1.c (printksset): 1136->1135 as overuse

	* Top/dnoise.c (dnoise): Changed 1052 to 1016 as overuse
