@@ -280,7 +280,7 @@ static void install_signal_handler(void)
 # endif
 #endif
 
-    for (x = sigs; *x > 0; x++)
+    for (x = sigs; *x > 0; x++) 
       signal(*x, signal_handler);
 }
 
