@@ -1,3 +1,7 @@
+2004-05-18  John ffitch  <jpff@codemist.co.uk>
+
+	* Opcodes/vdelayk.c (partial_maximum): Added maxk opcode
+
 2004-05-17  John  <jpff@cage.codemist.co.uk>
 
 	* SConstruct: Use -Wl,-Bdynamic as it is  linker option 
